services/kanboard/resources/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
  labels: &labels
    app.kubernetes.io/component: web
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:
      volumes:
        - name: volume
          persistentVolumeClaim:
            claimName: volume
        - name: plugins-volume
          persistentVolumeClaim:
            claimName: plugins-volume
      containers:
        - name: kanboard
          image: docker.io/kanboard/kanboard:v1.2.38
          volumeMounts:
            - name: volume
              mountPath: /var/www/app/data
            - name: plugins-volume
              mountPath: /var/www/app/plugins
          ports:
            - name: web
              containerPort: 80
